--- a/quickstart.html
+++ b/quickstart.html
@@ -85,10 +85,27 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a href="#home">Top</a></li>
+										<li><a href="index.html#home">Top</a></li>
 										<li><a href="#overview">Overview</a></li>
-										<li><a href="#technical">Technical Specifications</a></li>
-										<li><a href="quickstart.html">Quick Start</a></li>
+										<li>
+											<span class="opener">Technical Overview</span>
+											<ul>
+												<li><a href="index.html#technical">Technical Introduction</a></li>
+												<li><a href="index.html#hardware">Hardware</a></li>
+												<li><a href="index.html#software">Software</a></li>
+												</ul>
+											</li>
+										<li>
+											<span class="opener">Quick Start</span>
+											<ul>
+												<li><a href="quickstart.html">Quick Start</a></li>
+												<li><a href="quickstart.html#getstarted">Get Started</a></li>
+												<li><a href="quickstart.html#solder">Hardware and Soldering Guide</a></li>
+												<li><a href="quickstart.html#arduino">Arduino and Seed Guide</a></li>
+												<li><a href="quickstart.html#raspberrypi">Code</a></li>
+												<li><a href="quickstart.html#map">Mapping and Model</a></li>
+											</ul>
+										</li>
 										<li><a href="https://github.com/Mesquite-Mocap">GitHub Repositories</a></li>
 										<li><a href="https://artsmediaengineering.asu.edu/">School of Arts, Media and Engineering</a></li>
 									</ul>
@@ -104,7 +121,7 @@
 						</div>
 					</div>
 
-			</div>
+				</div>
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
