--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 												<li><a href="quickstart.html#getstarted">Get Started</a></li>
 												<li><a href="quickstart.html#solder">Hardware and Soldering Guide</a></li>
 												<li><a href="quickstart.html#arduino">Arduino and Seed Guide</a></li>
-												<li><a href="quickstart.html#raspberrypi">Code</a></li>
+												<li><a href="quickstart.html#raspberrypi">Raspberry Pi Code</a></li>
 												<li><a href="quickstart.html#map">Mapping and Model</a></li>
 											</ul>
 										</li>
