--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
 								<h4>Router</h4>
 
-								<p>You will need some basic router to allow the Seeds to push data to the Raspberri Pi for aggregation. Most will work. You can find the soldering guide in our quickstart page.</p>
+								<p>You will need some basic router to allow the Seeds to push data to the Raspberri Pi for aggregation. Most will work. You can find the soldering guide in our <a href="quickstart.html">quickstart page</a>.</p>
 
 
 
