--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 								<ol>
 									<li><a href="https://www.arduino.cc/">Ardunio IDE</a> (libraries are covered in the <a href="quickstart.html")</a> guide)</li>
 									<li>Any editor, we reccommend Atom</li>
-									<li>NodeJs (downloading instructions are in the <a href="quickstart.html">guide</a></li>
+									<li>Node.Js (downloading instructions are in the <a href="quickstart.html">guide</a></li>
 								</ol>
 
 								<p>If you're looking for specific ReadMe.m, we have them updated in the <a href="https://github.com/Mesquite-Mocap">Git Repo</a>. The repos you're going to use are:</p>
