Cleaned up the images for bno08x and cleaned up some errors

--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
 
 								<span class="image"><img src="https://m.media-amazon.com/images/I/51OiZN0ZQoS._AC_SL1000_.jpg" height="600px" alt="LilyGo TTGO Watch 2019"></span>
 
-								<p>You can purchase this watch from <a href="https://www.aliexpress.com/item/1005001581849024.html">AliExpress</a> or <a href="https://www.amazon.com/LILYGO-GPS-Lora-Programmable-Environmental/dp/B07ZWXV5FQ">Amazon.</p>
+								<p>You can purchase this watch from <a href="https://www.aliexpress.com/item/1005001581849024.html">AliExpress</a> or <a href="https://www.amazon.com/LILYGO-GPS-Lora-Programmable-Environmental/dp/B07ZWXV5FQ">Amazon.</a></p>
 
 								<h4>bno08x Chip</h4>
 
 								<p>Soldered onto the watch hardware, you will need the bno08x chip added to the watch.</p>
 
-								<span class="image"><img src="https://images-na.ssl-images-amazon.com/images/G/01/apparel/rcxgs/tile._CB483369110_.gif"></span>
+								<span class="image"><img src="https://images-na.ssl-images-amazon.com/images/I/71GmWElPVaL._AC_UL232_SR232,232_.jpg"></span>
 
 								<p>You can purchase this from <a href="https://www.aliexpress.com/item/4000263329804.html">Ali Express</a> or <a href="https://www.amazon.com/Taidacent-Nine-axis-High-Precision-Accelerometer-Magnetometer/dp/B0836WJLVH/">Amazon</a>. </p>
 
@@ -132,7 +132,7 @@
 								<p>To use this method, you need access to:</p>
 
 								<ol>
-									<li><a href="https://www.arduino.cc/">Ardunio IDE</a> (libraries are covered in the <a href="quickstart.html")</a> guide)</li>
+									<li><a href="https://www.arduino.cc/">Ardunio IDE</a> (libraries are covered in the <a href="quickstart.html">guide</a></li>
 									<li>Any editor, we reccommend Atom</li>
 									<li>Node.Js (downloading instructions are in the <a href="quickstart.html">guide</a></li>
 								</ol>
