cleaned up the formatting

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 								<h4>bno08x Chip</h4>
 
-								<p>Soldered onto the watch hardware, you will need the bno08x chip added to the watch.</p>
+								<p>Soldered onto the watch hardware, you will need the <b>bno08x</b> chip added to the watch.</p>
 
 								<span class="image"><img src="https://images-na.ssl-images-amazon.com/images/I/71GmWElPVaL._AC_UL232_SR232,232_.jpg"></span>
 
