Fixed broken image

--- a/quickstart.html
+++ b/quickstart.html
@@ -69,7 +69,7 @@
 
 									<p>Soldered onto the watch hardware, you will need the bno08x chip added to the watch.</p>
 
-									<span class="image"><img src="https://images-na.ssl-images-amazon.com/images/G/01/apparel/rcxgs/tile._CB483369110_.gif" width="600px"></span>
+									<span class="image"><img src="https://images-na.ssl-images-amazon.com/images/I/71GmWElPVaL._AC_UL232_SR232,232_.jpg" width="600px"></span>
 
 									<p>You can purchase this from <a href="https://www.aliexpress.com/item/4000263329804.html">Ali Express</a> or <a href="https://www.amazon.com/Taidacent-Nine-axis-High-Precision-Accelerometer-Magnetometer/dp/B0836WJLVH/">Amazon</a>. </p>
 
