Updated the Router instructions

--- a/quickstart.html
+++ b/quickstart.html
@@ -81,7 +81,7 @@
 
 									<h4>Router</h4>
 
-									<p>You will need some basic router to allow the Seeds to push data to the Raspberri Pi for aggregation. Most will work.</p>
+									<p>You will need some basic router to allow the Seeds to push data to the Raspberri Pi for aggregation. Most will work. Add your router’s SSID, password, and serverIP address as the variables for line 26, 27, and 28 respectively</p>
 
 									<a name="soldering"><h3>Soldering Guide</h3></a>
 
