--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 									<div class="content">
 										<header>
 											<a name="home"><h1>Mesquite Motion Capture</h1></a>
-											<p>An open source alternative to motion capture</p>
+											<p>An open source hardware alternative to motion capture</p>
 
 											<header class="major">
 											<a name="overview"><h2>Overview</h2> </header></a>
