--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 											<a name="overview"><h2>Overview</h2> </header></a>
 
 										</header>
-										<p>The overall scope of Mesquite Mocap is to make an open-source, low-cost motion capture process using IMU devices and javascript. A traditional mocap set up can cost upwards of $100k. Each IMU device starts at $35 dollars. By creating a system of many <a href="http://www.lilygo.cn/prod_view.aspx?Id=1123">TTGO T-Watches</a>, we can rig 3D models using motion data. This project is open-source and available for community developers and artists. Anyone can access the code, add to the code, or change it to their needs. All Mesquite Mocap code is under the GNU General Public License.</p>
+										<p>The objective of the Mesquite Mocap project is to develop a Motion Capture kit that is affordable and allows for users to have access to real-time capture capabilities. By making all the code open-source, it allows for users to access the code to best suite their needs.</p>
 
 										<header class="major">
 										<h3>Application and Terminology</h3> </header>
@@ -176,7 +176,7 @@
 									</header>
 									<ul>
 										<li><a href="index.html#home">Top</a></li>
-										<li><a href="#overview">Overview</a></li>
+										<li><a href="#overview">Team</a></li>
 										<li>
 											<span class="opener">Technical Overview</span>
 											<ul>
